--- a/register_front/register.html
+++ b/register_front/register.html
@@ -31,8 +31,38 @@
                 alert('邮箱格式错误')
                 return false
             }
-            document.getElementById('myForm').submit()
-            alert("信息已经被提交，请查看邮件")
+            var request = new XMLHttpRequest();
+            request.open("POST", "http://localhost:8000/register");
+
+            var data = new FormData();
+            data.append("name", name);
+            data.append("studentId", studentId);
+            data.append("email", email);
+            request.send(data)
+            
+            request.onreadystatechange = function () {
+                if(request.readyState === 4){                 
+                    // 如果成功连接服务器
+                    if(request.status === 200 || request.status === 304){
+                        var response = request.responseText
+                        console.log(response)
+                        if(response['status'] == 1){
+                            alert("提交成功，请查看邮件获取 rstudio 账号和密码")
+                            window.location.href='https://www.baidu.com'
+
+                        }else{
+                            alert(response['Info'])
+                        }
+                    }
+                    else{
+                        alert("提交出错了！请重新输入。");
+                    }
+                }
+            };
+
+            // // 用 Send 方法可以发送字符串和 FormData 对象的内容
+            //document.getElementById('myForm').submit()
+            //alert("信息已经被提交，请查看邮件")
         }
     </script>
     <div class="register-panel">
